Added GET user/rooms and POST /rooms
