# src/main/resources/swagger.yaml
@@ -94,10 +94,10 @@ paths:
         403:
           description: only you can delete yourself.
 
-  /user/polls:
+  /user/rooms:
     get:
-      summary: Gets your polls
-      description: retrives a list of your polls.
+      summary: Gets your rooms
+      description: retrives a list of your rooms.
       produces:
         - application/json
       parameters:
@@ -112,15 +112,119 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/completePoll'
+              $ref: '#/definitions/completeRoom'
         400:
           description: Bad request.
         403:
           description: Forbidden.
 
+  /rooms:
+    post:
+      summary: New room
+      description: |
+        Creates a new room
+      consumes:
+        - application/json
+      parameters:
+        - name: room
+          in: body
+          description: room to be created
+          required: true
+          schema:
+            $ref: '#/definitions/room'
+        - name: token
+          in: header
+          description: token to be passed as a header
+          required: true
+          type: string
 
+      responses:
+        201:
+          description: Sucessfully created.
+        400:
+          description: Bad request.
+        403:
+          description: Forbidden.
 
-  /polls:
+  /rooms/{room_id}:
+    patch:
+      summary: Patches this room.
+      description: Patches this room.
+      parameters:
+        - name: room_id
+          in: path
+          description: room to be modified
+          required: true
+          type: integer
+          format: int64
+        - name: room
+          in: body
+          description: room to be patched
+          required: true
+          schema:
+            $ref: '#/definitions/room'
+        - name: token
+          in: header
+          description: token to be passed as a header
+          required: true
+          type: string
+      responses:
+        200:
+          description: OK
+        401:
+          description: You don't own this room.
+        403:
+          description: You don't have a token.
+        404:
+          description: not found.
+
+    delete:
+      summary: Deletes this room.
+      description: Deletes this room.
+      parameters:
+        - name: room_id
+          in: path
+          description: room to be deleted
+          required: true
+          type: integer
+          format: int64
+        - name: token
+          in: header
+          description: token to be passed as a header
+          required: true
+          type: string
+      responses:
+        200:
+          description: OK
+        401:
+          description: You don't own this room.
+        403:
+          description: You don't have a token.
+        404:
+          description: not found.
+
+    get:
+      summary: Gets this room.
+      description: Gets this room. Rooms are visible by all.
+      parameters:
+        - name: room_id
+          in: path
+          description: room to be get
+          required: true
+          type: integer
+          format: int64
+        - name: token
+          in: header
+          description: token to be passed as a header
+          required: true
+          type: string
+      responses:
+        200:
+          description: OK
+        404:
+          description: not found.
+
+  /rooms/{room_id}/polls:
     post:
       summary: New poll
       description: |
@@ -128,6 +232,12 @@ paths:
       consumes:
         - application/json
       parameters:
+        - name: room_id
+          in: path
+          description: the room
+          required: true
+          type: integer
+          format: int64
         - name: poll
           in: body
           description: poll to be created
@@ -139,54 +249,15 @@ paths:
           description: token to be passed as a header
           required: true
           type: string
-
       responses:
         201:
-          description: Sucessfully created. - Returns the id of the created poll
-          schema:
-            type: integer
-            format: int64
+          description: Sucessfully created.
         400:
           description: Bad request.
         403:
           description: Forbidden.
-        409:
-          description: A poll with this name already exists.
 
-  /polls/{p_id}:
-
-    post:
-      summary: add a question
-      description: adds a question to your poll
-      consumes:
-        - application/json
-      parameters:
-        - name: p_id
-          in: path
-          description: poll to be modified
-          required: true
-          type: integer
-          format: int64
-        - name: poll
-          in: body
-          description: poll to be patched
-          required: true
-          schema:
-            $ref: '#/definitions/question'
-        - name: token
-          in: header
-          description: token to be passed as a header
-          required: true
-          type: string
-
-      responses:
-        200:
-          description: OK - returns the id of the created question
-          schema:
-            type: integer
-            format: int64
-
-
+  /rooms/{room_id}/polls/{p_id}:
     get:
       summary: Gets a poll
       description: |
@@ -194,6 +265,12 @@ paths:
       produces:
         - application/json
       parameters:
+        - name: room_id
+          in: path
+          description: the room
+          required: true
+          type: integer
+          format: int64
         - name: p_id
           in: path
           description: poll to be retrived
@@ -214,6 +291,12 @@ paths:
       summary: deletes poll.
       description: deletes this poll only if you owns it.
       parameters:
+        - name: room_id
+          in: path
+          description: the room
+          required: true
+          type: integer
+          format: int64
         - name: p_id
           in: path
           description: poll to be retrived
@@ -235,15 +318,58 @@ paths:
         404:
           description: Not found.
 
+    post:
+      summary: add a question
+      description: adds a question to your poll
+      consumes:
+        - application/json
+      parameters:
+        - name: room_id
+          in: path
+          description: the room
+          required: true
+          type: integer
+          format: int64
+        - name: p_id
+          in: path
+          description: poll to be modified
+          required: true
+          type: integer
+          format: int64
+        - name: poll
+          in: body
+          description: poll to be patched
+          required: true
+          schema:
+            $ref: '#/definitions/question'
+        - name: token
+          in: header
+          description: token to be passed as a header
+          required: true
+          type: string
 
-  /polls/{p_id}/{q_id}:
+      responses:
+        201:
+          description: OK
+        401:
+          description: You don't own this poll.
+        403:
+          description: You don't have a token.
 
+
+  /rooms/{room_id}/polls/{p_id}/question/{q_id}:
     patch:
       summary: patch this question
       description: Update a question in your poll. If users are using it, they will be notified instantly via websocket.
       consumes:
         - application/json
       parameters:
+        - name: room_id
+          in: path
+          description: the room
+          required: true
+          type: integer
+          format: int64
         - name: p_id
           in: path
           description: poll to be patched
@@ -276,10 +402,17 @@ paths:
           description: Forbidden.
         404:
           description: Not found.
+
     delete:
       summary: deletes a question
       description: deletes a question of this poll
       parameters:
+        - name: room_id
+          in: path
+          description: the room
+          required: true
+          type: integer
+          format: int64
         - name: p_id
           in: path
           description: poll to be patched
@@ -322,6 +455,35 @@ definitions:
       token:
         type: string
 
+  room:
+    type: object
+    required:
+      - name
+    properties:
+      name:
+        type: string
+
+  completeRoom:
+    type: object
+    required:
+      - id
+      - owner
+      - name
+      - polls
+    properties:
+      id:
+        type: integer
+        format: int64
+      owner:
+        type: integer
+        format: int64
+      name:
+        type: string
+      polls:
+        type: array
+        items:
+          $ref: '#/definitions/completePoll'
+
   poll:
     type: object
     required:
@@ -360,12 +522,17 @@ definitions:
     required:
       - id
       - body
+      - answers
     properties:
       id:
         type: integer
         format: int64
       body:
         type: string
+      answers:
+        type: array
+        items:
+          $ref: '#/definitions/CompleteAsnwer'
 
   asnwer:
     type: object
